--- a/css/lx-style.css
+++ b/css/lx-style.css
@@ -1,6 +1,31 @@
 ﻿/* */
-.contactusdiyou {position: fixed; right: -230px; bottom: 0px; _position: absolute; width: 230px; height: 100%; background: #009aff; z-index: 99999999999;  _margin-bottom:0px;  transition:all .5s ease; }
-.contactusdiyou .hoverbtn{width:30px; height:129px; padding-top:20px; cursor: pointer; position:absolute; top:50%; margin-top:-66px;left:-30px; font-size:14px; color:#fff; background:#009aff; -webkit-border-radius: 3px 0px  0px 3px; -moz-border-radius: 3px 0px  0px 3px; -o-border-radius: 3px 0px  0px 3px;      border-radius: 3px 0px  0px 3px; -moz-box-shadow: -4px 4px 4px -4px #000; -webkit-box-shadow: -4px 4px 4px -4px #000; box-shadow: -4px 4px 4px -4px #000;}
+.contactusdiyou
+{
+    position: fixed;
+    right: -230px;
+    bottom: 0px;
+    _position: absolute;
+    width: 230px;
+    height: 100%;
+    background: #222222;
+    z-index: 99999999999;
+    _margin-bottom:0px;
+    transition:all
+    .5s ease; }
+.contactusdiyou .hoverbtn
+{
+    width:30px;
+    height:129px;
+    padding-top:20px;
+    cursor: pointer;
+    position:absolute;
+    top:50%;
+    margin-top:-66px;
+    left:-30px;
+    font-size:14px;
+    color:#fff;
+    background: #222222;
+    -webkit-border-radius: 3px 0px  0px 3px; -moz-border-radius: 3px 0px  0px 3px; -o-border-radius: 3px 0px  0px 3px;      border-radius: 3px 0px  0px 3px; -moz-box-shadow: -4px 4px 4px -4px #000; -webkit-box-shadow: -4px 4px 4px -4px #000; box-shadow: -4px 4px 4px -4px #000;}
 .contactusdiyou .hoverbtn span{width:30px; height:19px;line-height: 19px; text-align: center; overflow:hidden; float:left;}
 .contactusdiyou .hoverbtn .hoverimg{width:13px; height:9px; margin:10px 0px 0px 10px; float:left; display:inline;background-repeat: no-repeat;}
 
