--- a/css/weiC.css
+++ b/css/weiC.css
@@ -325,7 +325,7 @@ header .intro-text .intro-heading
     content: "\201D";
 }
 .box-content.box-2-img{
-    color: #1673ff;
+    color: #e0511e;
     background: url("../images/bak2.jpg") no-repeat fixed;
 }
 
