--- a/css/lx-style.css
+++ b/css/lx-style.css
@@ -1,47 +1,2 @@
-﻿/* */
-.contactusdiyou
-{
-    position: fixed;
-    right: -230px;
-    bottom: 0px;
-    _position: absolute;
-    width: 230px;
-    height: 100%;
-    background: #222222;
-    z-index: 99999999999;
-    _margin-bottom:0px;
-    transition:all
-    .5s ease; }
-.contactusdiyou .hoverbtn
-{
-    width:30px;
-    height:129px;
-    padding-top:20px;
-    cursor: pointer;
-    position:absolute;
-    top:50%;
-    margin-top:-66px;
-    left:-30px;
-    font-size:14px;
-    color:#fff;
-    background: #222222;
-    -webkit-border-radius: 3px 0px  0px 3px; -moz-border-radius: 3px 0px  0px 3px; -o-border-radius: 3px 0px  0px 3px;      border-radius: 3px 0px  0px 3px; -moz-box-shadow: -4px 4px 4px -4px #000; -webkit-box-shadow: -4px 4px 4px -4px #000; box-shadow: -4px 4px 4px -4px #000;}
-.contactusdiyou .hoverbtn span{width:30px; height:19px;line-height: 19px; text-align: center; overflow:hidden; float:left;}
-.contactusdiyou .hoverbtn .hoverimg{width:13px; height:9px; margin:10px 0px 0px 10px; float:left; display:inline;background-repeat: no-repeat;}
-
-.contactusdiyou .conter{width:186px; height:560px; margin-left:22px;   position:absolute; top:55%;*margin-top:-140px;margin-top:-280px;}
-
-.contactusdiyou  dl .f1{width:142px; height:36px;line-height: 36px; float:right; font-size:14px;_font-size: 14px;*font-size: 15px; color:#fff;vertical-align: top; font-weight: bold;}
-
-.contactusdiyou  dl .f2{ width:142px; float:right; font-size:12px; color:#fff; height:30px;line-height: 30px; float:right;}
-.kefuQQ a{ background:url(../images/button-custom-qq.gif)  no-repeat; width:70px; height:20px; display:inline-block; vertical-align:middle;}
-.kefuQQ a:hover{ background:url(../images/button-custom-qq-h.gif)  no-repeat;}
-
-
-
-.contactusdiyou .weixincall{float:right;padding:22px 0; border-bottom:1px solid #6a6a6a;}
-
-
-.contactusdiyou .dytimer{    float: right; width: 160px; height: 40px; padding: 16px 0px 15px 0px; /* background: #007b77; */ margin: 20px 0px 0px 0px;}
-.contactusdiyou .dytimer span{display:block; height:20px; line-height:20px; font-size:14px; color:#fff;}
-.fn_cle:after {visibility: hidden; display: block; font-size: 0; content: " "; clear: both; height: 0; } /***联系我们***/
+﻿@charset "utf-8";.contactusdiyou{position:fixed;right:-230px;bottom:0px;_position:absolute;width:230px;height:100%;background:#222222;z-index:99999999999;_margin-bottom:0px;transition:all
+.5s ease;}.contactusdiyou .hoverbtn{width:30px;height:129px;padding-top:20px;cursor:pointer;position:absolute;top:50%;margin-top:-66px;left:-30px;font-size:14px;color:#fff;background:#222222;-webkit-border-radius:3px 0px  0px 3px;-moz-border-radius:3px 0px  0px 3px;-o-border-radius:3px 0px  0px 3px;border-radius:3px 0px  0px 3px;-moz-box-shadow:-4px 4px 4px -4px #000;-webkit-box-shadow:-4px 4px 4px -4px #000;box-shadow:-4px 4px 4px -4px #000;}.contactusdiyou .hoverbtn span{width:30px;height:19px;line-height:19px;text-align:center;overflow:hidden;float:left;}.contactusdiyou .hoverbtn .hoverimg{width:13px;height:9px;margin:10px 0px 0px 10px;float:left;display:inline;background-repeat:no-repeat;}.contactusdiyou .conter{width:186px;height:560px;margin-left:22px;position:absolute;top:55%;*margin-top:-140px;margin-top:-280px;}.contactusdiyou  dl .f1{width:142px;height:36px;line-height:36px;float:right;font-size:14px;_font-size:14px;*font-size:15px;color:#fff;vertical-align:top;font-weight:bold;}.contactusdiyou  dl .f2{width:142px;float:right;font-size:12px;color:#fff;height:30px;line-height:30px;float:right;}.kefuQQ a{background:url(../images/button-custom-qq.gif)  no-repeat;width:70px;height:20px;display:inline-block;vertical-align:middle;}.kefuQQ a:hover{background:url(../images/button-custom-qq-h.gif)  no-repeat;}.contactusdiyou .weixincall{float:right;padding:22px 0;border-bottom:1px solid #6a6a6a;}.contactusdiyou .dytimer{float:right;width:160px;height:40px;padding:16px 0px 15px 0px;margin:20px 0px 0px 0px;}.contactusdiyou .dytimer span{display:block;height:20px;line-height:20px;font-size:14px;color:#fff;}.fn_cle:after{visibility:hidden;display:block;font-size:0;content:" ";clear:both;height:0;}
